--- a/aboutme.html
+++ b/aboutme.html
@@ -3,51 +3,10 @@
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://www.fontify.me/wf/7e8bb6e91946fdb31e5d9104a740ee5f" rel="stylesheet" type="text/css" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <title>Explore Erica!</title> 
   </head>
   <body>
-    <div class="w3-sidebar w3-bar-block w3-white w3-animate-left" style="display:none;z-index:4" id="mySidebar">
-  <button class="tablinks" onclick="openTab(event, 'Home')">Home</button>
-  <button class="tablinks" onclick="openTab(event, 'Likes/Dislikes')">Likes/Dislikes</button>
-      <button class="tablinks" onclick="openTab(event, 'Websites')">Websites</button>
-      <button class="tablinks" onclick="openTab(event, 'Projects')">Projects</button>
-</div>
-
-    <div id="Home" class="tabcontent>
-       <center><h1>All About Me:<em>Erica Edition</em></h1></center>
-  <center><img src="https://bit.ly/2u1EQZr" style= "width:200px; height:200px;"></center>
-      <p> Hi! My name is Erica Ramos Eisenman and I am Filipino and German! I'm an incoming senior at Castro Valley High School. 
-        Some might say that I'm crazy, wild, and fun and others might say that I'm quiet, reserved, and shy. 
-        <em>Many</em> people interpret me in <em>many</em> ways. You can either find me singing, sleeping, eating, walking or hiking to
-        my next adventure. I love dogs and long walks on the beach.  </p>
-      </div>                                                                            
-      <div id="Likes/Dislikes" class="tabcontent>
-<!-- Overlay -->
-<div class="w3-overlay" onclick="w3_close()" style="cursor:pointer"></div>
-    <!-- Page Content -->
-<div class="w3-overlay w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" id="myOverlay"></div>
-
-<div>
-  <button class="w3-button w3-white w3-xxlarge" onclick="w3_open()">&#9776;</button>
-  <div class="w3-container">
-  </div>
-</div>  
-    <script>
-function w3_open() {
-    document.getElementById("mySidebar").style.display = "block";
-    document.getElementById("myOverlay").style.display = "block";
-}
-function w3_close() {
-    document.getElementById("mySidebar").style.display = "none";
-    document.getElementById("myOverlay").style.display = "none";
-}
-</script>
-       <div style ="overflow-x:auto;">
-      <table style="width:90%; margin:1em auto">
-        <tr>
-          <th> <center><h2>Things I Enjoy</h2></center>
+        <center><h2>Things I Enjoy</h2></center>
       <ul>
         <li><small> Dogs </small></li>
         <li><small> Cats </small></li>
@@ -70,8 +29,6 @@ function w3_close() {
         <li><small> Korean Dramas </small></li>
       <li><small> Traveling </small></li>
       </ul>
-          </th>
-          <th>
   <center><h3>What Grinds My Gears</h3></center>
             <ul>
         <li><small> When styrofoam is rubbed together </small></li>
@@ -95,10 +52,7 @@ function w3_close() {
         <li><small> When people say they're broke but they still have money</small></li>
               <li><small> When people point out my flaws </small></li>
             </ul>
-          </th>
-        </tr>
-         </table>
-      </div>
+       
 <center><h3>Websites I Enjoy To Go On (sometimes)</h3></center>
             <ul>
         <li><a href="https://www.youtube.com">Youtube</a></li>
@@ -108,8 +62,7 @@ function w3_close() {
         <li><a href="https://www.tumblr.com">Tumblr</a></li>
         <li><a href="https://www.pinterest.com">Pinterest</a></li>
         <li><a href="https://www.amazon.com">Amazon</a></li>
-      </ul>
-  <p2><center><strong>FUN FACT: I LOVE TEA!</strong></center></p2>
+    </ul>
     </div>
       </body>
 </html>
