--- a/aboutme.html
+++ b/aboutme.html
@@ -6,6 +6,9 @@
     <title>Explore Erica!</title> 
   </head>
   <body>
+    <h1><em> All About Me: Erica Edition </em><h1>
+      <img src="http://imgur.com/a/xb036" tyle="width:304px;height:228px;">
+      <center><p> ... <p></center>
         <center><h2>Things I Enjoy</h2></center>
       <ul>
         <li><small> Dogs </small></li>
