--- a/aboutme.html
+++ b/aboutme.html
@@ -6,8 +6,8 @@
     <title>Explore Erica!</title> 
   </head>
   <body>
-    <h1><em> All About Me: Erica Edition </em><h1>
-      <img src="http://imgur.com/a/xb036" tyle="width:304px;height:228px;">
+    <center><h1><em> All About Me: Erica Edition </em><h1></center>
+      <img src="http://bit.ly/2u1EQZr" style="width:304px;height:228px;">
       <center><p> ... <p></center>
         <center><h2>Things I Enjoy</h2></center>
       <ul>
