--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <center><h1><em> All About Me: Erica Edition </em><h1></center>
-      <img src="http://bit.ly/2u1EQZr" style="width:304px;height:228px;">
+      <center><img src="http://bit.ly/2u1EQZr" style="width:300px;height:300px;"></center>
       <center><p> ... <p></center>
         <center><h2>Things I Enjoy</h2></center>
       <ul>
