--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
   <body>
     <center><h1><em> All About Me: Erica Edition </em><h1></center>
       <center><img src="http://bit.ly/2u1EQZr" style="width:300px;height:300px;"></center>
-      <center><p> ... <p></center>
+      <center><p> Hello! My name is Erica Ramos Eisenman and I am a senior at Castro Valley High School, and I am 16 years old. <p></center>
         <center><h2>Things I Enjoy</h2></center>
       <ul>
         <li><small> Dogs </small></li>
