--- a/aboutme.html
+++ b/aboutme.html
@@ -3,11 +3,12 @@
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://www.fontify.me/wf/7e8bb6e91946fdb31e5d9104a740ee5f" rel="stylesheet" type="text/css" href="style.css">
+    <script src="myscripts.js"></script>
     <title>Explore Erica!</title> 
   </head>
   <body>
     <center><h1><em> All About Me: Erica Edition </em><h1></center>
-      <center><img src="http://bit.ly/2u1EQZr" style="width:300px;height:300px;"></center>
+      <center><img src="http://bit.ly/2u1EQZr" style="width:300px;height:300px; margin-top: 50px; margin-bottom: 50px;"></center>
       <center><p> Hello! My name is Erica Ramos Eisenman and I am a senior at Castro Valley High School, and I am 16 years old. <p></center>
         <center><h2>Things I Enjoy</h2></center>
       <ul>
