--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://www.fontify.me/wf/7e8bb6e91946fdb31e5d9104a740ee5f" rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://www.fontify.me/wf/65ec30c7a48ed050a661e7ca9c3b1226" rel="stylesheet" type="text/css href="style.css">
+    <link href="https://www.fontify.me/wf/65ec30c7a48ed050a661e7ca9c3b1226" rel="stylesheet" type="text/css" href="style.css">
     <script src="myscripts.js"></script>
     <title>Explore Erica!</title> 
   </head>
