--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,8 @@
       <center><img src="https://bit.ly/2u1EQZr" style="width:300px;height:300px; margin-top: 10px; margin-bottom: 10px;"></center>
       <center><p> Hello! My name is Erica Ramos Eisenman and I am a senior at Castro Valley High School, and I am 16 years old. I am Filipino and German hence my 
         last name! I don't do fun things often but when I do, you can often find me writing, listening to music, binge watching on Netflix, or off towards my next adventure! <p></center>
-        <center><h2>Things I Enjoy</h2></center>
+       <div class="line-separator"></div>
+      <center><h2>Things I Enjoy</h2></center>
       <ul>
         <li><small> Dogs </small></li>
         <li><small> Cats </small></li>
