--- a/aboutme.html
+++ b/aboutme.html
@@ -8,6 +8,11 @@
     <title>Explore Erica!</title> 
   </head>
   <body>
+    <a href="https://eeisenman.github.io/portfolio/aboutme.html" class="button">Home</a>
+    <a href="#" class="button">Likes/Dislikes</a>
+    <a href="#" class="button">Websites</a>
+    <a href="#" class="button">Projects</a>
+    <a href="#" class="button">Pictures</a>
     <center><h1><em> All About Me: Erica Edition </em><h1></center>
       <center><img src="https://bit.ly/2u1EQZr" style="width:300px;height:300px; margin-top: 10px; margin-bottom: 10px;"></center>
       <center><p> Hello! My name is Erica Ramos Eisenman and I am a senior at Castro Valley High School, and I am 16 years old. I am Filipino and German hence my 
@@ -35,6 +40,7 @@
         <li><small> Rain </small></li>
         <li><small> Korean Dramas </small></li>
       <li><small> Traveling </small></li>
+        <li><small> Candles </small></li>
       </ul>
   <center><h3>What Grinds My Gears</h3></center>
             <ul>
@@ -58,6 +64,10 @@
         <li><small> When people blow things way out of proportion </small></li>
         <li><small> When people say they're broke but they still have money</small></li>
               <li><small> When people point out my flaws </small></li>
+              <li><small> When people say "LOL" out loud or in a letter </small></li>
+              <li><small> When people put their feet on the deck of a car </small></li>
+              <li><small> When people hate on candles </small></li>
+              <li><small> When people hate on your music but then they start listening to it the next day </small></li>
             </ul>
        <hr>
 <center><h3>Websites I Enjoy To Go On (sometimes)</h3></center>
