--- a/aboutme.html
+++ b/aboutme.html
@@ -8,13 +8,13 @@
     <title>Explore Erica!</title> 
   </head>
   <body>
-    <a href="https://eeisenman.github.io/portfolio/aboutme.html" class="button">Home</a>
-    <a href="#" class="button">Likes/Dislikes</a>
+    <a href="aboutme.html" class="button">Home</a>
+    <a href="likesndislikes.html" class="button">Likes/Dislikes</a>
     <a href="#" class="button">Websites</a>
     <a href="#" class="button">Projects</a>
     <a href="#" class="button">Pictures</a>
     <center><h1><em> All About Me: Erica Edition </em><h1></center>
-      <center><img src="https://bit.ly/2u1EQZr" style="width:300px;height:300px; margin-top: 10px; margin-bottom: 10px;"></center>
+      <center><img src="https://bit.ly/2u1EQZr" style="width:300px;height:300px; margin-top: 10px; margin-bottom: 10px; border: 2px solid #555555;"></center>
       <center><p> Hello! My name is Erica Ramos Eisenman and I am a senior at Castro Valley High School, and I am 16 years old. I am Filipino and German hence my 
         last name! I don't do fun things often but when I do, you can often find me writing, listening to music, binge watching on Netflix, or off towards my next adventure! <p></center>
       <hr>
