--- a/likesndislikes.html
+++ b/likesndislikes.html
@@ -4,6 +4,11 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+      <a href="aboutme.html" class="button">Home</a>
+    <a href="likesndislikes.html" class="button">Likes/Dislikes</a>
+    <a href="#" class="button">Websites</a>
+    <a href="#" class="button">Projects</a>
+    <a href="#" class="button">Pictures</a>
 <center><h2>Things I Enjoy</h2></center>
       <ul>
         <li><small> Dogs </small></li>
