--- a/aboutme.html
+++ b/aboutme.html
@@ -10,23 +10,12 @@
   <body>
     <a href="aboutme.html" class="button">Home</a>
     <a href="likesndislikes.html" class="button">Likes/Dislikes</a>
-    <a href="#" class="button">Websites</a>
-    <a href="#" class="button">Projects</a>
-    <a href="#" class="button">Pictures</a>
+    <a href="websites.html" class="button">Websites</a>
+    <a href="projects.html" class="button">Projects</a>
+    <a href="pictures.html" class="button">Pictures</a>
     <center><h1><em> All About Me: Erica Edition </em><h1></center>
       <center><img src="https://bit.ly/2u1EQZr" style="width:300px;height:300px; margin-top: 10px; margin-bottom: 10px; border: 2px solid #555555;"></center>
       <center><p> Hello! My name is Erica Ramos Eisenman and I am a senior at Castro Valley High School, and I am 16 years old. I am Filipino and German hence my 
         last name! I don't do fun things often but when I do, you can often find me writing, listening to music, binge watching on Netflix, or off towards my next adventure! <p></center>
-<center><h3>Websites I Enjoy To Go On (sometimes)</h3></center>
-            <ul>
-        <li><a href="https://www.youtube.com">Youtube</a></li>
-        <li><a href="https://www.netflix.com/browse">Netflix</a></li>
-        <li><a href="https://www.facebook.com">Facebook</a></li>
-        <li><a href="https://www.instagram.com">Instagram</a></li>
-        <li><a href="https://www.tumblr.com">Tumblr</a></li>
-        <li><a href="https://www.pinterest.com">Pinterest</a></li>
-        <li><a href="https://www.amazon.com">Amazon</a></li>
-    </ul>
-    </div>
       </body>
 </html>
