--- a/pictures.html
+++ b/pictures.html
@@ -9,6 +9,19 @@
     <a href="websites.html" class="button">Websites</a>
     <a href="projects.html" class="button">Projects</a>
     <a href="pictures.html" class="button">Pictures</a>
+<div class="polaroid">
+  <img src="rock600x400.jpg" alt="Norway" style="width:100%">
+  <div class="container">
+    <p>The Troll's tongue in Hardanger, Norway</p>
+  </div>
+</div>
+
+<div class="polaroid">
+  <img src="lights600x400.jpg" alt="Norway" style="width:100%">
+  <div class="container">
+    <p>Northern Lights in Norway</p>
+  </div>
+</div>
 
 </body>
 </html>
