--- a/pictures.html
+++ b/pictures.html
@@ -3,25 +3,36 @@
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body style="margin: 25px;">
 <a href="aboutme.html" class="button">Home</a>
     <a href="likesndislikes.html" class="button">Likes/Dislikes</a>
     <a href="websites.html" class="button">Websites</a>
     <a href="projects.html" class="button">Projects</a>
     <a href="pictures.html" class="button">Pictures</a>
 <div class="polaroid">
-  <img src="rock600x400.jpg" alt="Norway" style="width:100%">
+  <img src="http://bit.ly/2wcW7fR" style="width:100%">
   <div class="container">
-    <p>The Troll's tongue in Hardanger, Norway</p>
+    <p>CHOIR 2017</p>
   </div>
 </div>
 
 <div class="polaroid">
-  <img src="lights600x400.jpg" alt="Norway" style="width:100%">
+  <img src="http://bit.ly/2vX1lgl" style="width:100%">
   <div class="container">
-    <p>Northern Lights in Norway</p>
+    <p>LA 2017</p>
   </div>
 </div>
-
+<div class="polaroid">
+  <img src="http://bit.ly/2vdmIMj" style="width:100%">
+  <div class="container">
+    <p>PROM 2017</p>
+  </div>
+</div>
+    <div class="polaroid">
+  <img src="http://bit.ly/2hfQ0o7" style="width:100%">
+  <div class="container">
+    <p>FAM 2017</p>
+  </div>
+</div>
 </body>
 </html>
