--- a/pictures.html
+++ b/pictures.html
@@ -10,26 +10,26 @@
     <a href="projects.html" class="button">Projects</a>
     <a href="pictures.html" class="button">Pictures</a>
 <div class="polaroid">
-  <img src="http://bit.ly/2wcW7fR" style="width:100%">
+  <img src="http://bit.ly/2wcW7fR" style="width:100px;height:100px">
   <div class="container">
     <p>CHOIR 2017</p>
   </div>
 </div>
 
 <div class="polaroid">
-  <img src="http://bit.ly/2vX1lgl" style="width:100%">
+  <img src="http://bit.ly/2vX1lgl" style="width:100px;height:100px">
   <div class="container">
     <p>LA 2017</p>
   </div>
 </div>
 <div class="polaroid">
-  <img src="http://bit.ly/2vdmIMj" style="width:100%">
+  <img src="http://bit.ly/2vdmIMj" style="width:100px;height:100px">
   <div class="container">
     <p>PROM 2017</p>
   </div>
 </div>
     <div class="polaroid">
-  <img src="http://bit.ly/2hfQ0o7" style="width:100%">
+  <img src="http://bit.ly/2hfQ0o7" style="width:100px;height:100px">
   <div class="container">
     <p>FAM 2017</p>
   </div>
