--- a/pictures.html
+++ b/pictures.html
@@ -10,7 +10,7 @@
     <a href="projects.html" class="button">Projects</a>
     <a href="pictures.html" class="button">Pictures</a>
 
-  <img src="http://bit.ly/2wcW7fR" style="width:300px;height:300px">
+ #// <img src="http://bit.ly/2wcW7fR" style="width:300px;height:300px">
   
 
 
@@ -22,6 +22,6 @@
    
   <img src="http://bit.ly/2hfQ0o7" style="width:300px;height:300px">
   
-
+//#
 </body>
 </html>
