--- a/pictures.html
+++ b/pictures.html
@@ -3,25 +3,12 @@
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body style="margin: 25px;">
+<body>
 <a href="aboutme.html" class="button">Home</a>
     <a href="likesndislikes.html" class="button">Likes/Dislikes</a>
     <a href="websites.html" class="button">Websites</a>
     <a href="projects.html" class="button">Projects</a>
     <a href="pictures.html" class="button">Pictures</a>
 
- #// <img src="http://bit.ly/2wcW7fR" style="width:300px;height:300px">
-  
-
-
-  <img src="http://bit.ly/2vX1lgl" style="width:300px;height:300px">
-  
-
-  <img src="http://bit.ly/2vdmIMj" style="width:300px;height:300px">
- 
-   
-  <img src="http://bit.ly/2hfQ0o7" style="width:300px;height:300px">
-  
-//#
 </body>
 </html>
